Fix spacing on About page

--- a/stopwatch/scss/custom-blocks.scss
+++ b/stopwatch/scss/custom-blocks.scss
@@ -4,10 +4,12 @@
 
 .contact-us h2 {
   @include heading-xxlarge;
+  @include mb(7);
 }
 
 .contact-us .linkblock-links-container {
   @extend .container-fluid;
+  @extend .g-3;
 }
 
 .contact-us .linkblock-links-list {
